Minor heading change

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Metal</title>
+    <title>TheMetal</title>
   </head>
   <body>
     <header>
-      <h1>Welcome to The Metal</h1>
+      <h1>Welcome to TheMetal!</h1>
     </header>
   </body>
 </html>
