--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TheMetal</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <header>
       <h1>Welcome to TheMetal!</h1>
+      <img src="./images/satan.jpg" alt="Image of Baphomet" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+        cupiditate omnis ipsum! Accusantium, facere consectetur illo explicabo
+        sequi dolores. Incidunt.
+      </p>
+      <p>Hail Satan \m/</p>
     </header>
   </body>
 </html>
